[tool.poetry]
name = "flask-demo"
version = "0.1.0"
description = ""
authors = ["emma <eqbrown@isf.edu.hk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"
pytest = "^8.3.5"
flask-restful = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
